--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@700&display=swap");
+
+:root {
+  /* Colors */
+    --brand-color: hsl(46, 100%, 50%);
+    --black: hsl(0, 0%, 0%);
+    --white: hsl(0, 0%, 100%);
+  /* Fonts */
+    --font-title: "Montserrat", sans-serif;
+    --font-text: "Lato", sans-serif;
+}
+
 
 *,::before, ::after{
     padding: 0;
@@ -8,6 +20,7 @@
 
 .html {
     font-size: 62.5%;
+    
 }
 
 body {
@@ -22,20 +35,186 @@ body {
 main
 {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-rows: 10em auto 1fr auto;
     grid-row: 2;
 
+}
+h2
+{
+    padding-left: 10px;
+    grid-column: 1;
+    grid-row: 2;
+    color: #ffffff;
+}
+.about
+{
+
+    grid-column: 1;
+    grid-row: 2;
+    width: 30em;
+    padding: 5px;
+    color: #ffffff;
+    font-size: 15px;
+    text-align: left;
+    margin-left: 5%;
+    margin-top: 10%;
 
 }
 main h1
 {
+    grid-row: 1;
     color: #ffffff;
-    grid-column: 2;
+    grid-column: 1/3;
     text-align: center;
     position: relative;
     top: 50%;
 }
+main .rambo
+{
+    grid-row: 2;
+    grid-column: 3;
+    height: 20em;
+    margin-top: 10%;
+}
+.comp
+{
+    grid-row: 3;
+    grid-column: 1/4;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto 1fr 1fr;
+    place-items: center;
+}
+#titre1
+{
+    grid-row: 1;
+    grid-column: 1/6;
+}
+
+
+#portfolio
+{
+    grid-row: 4;
+    grid-column: 1/4;
+    margin-top: 15px;
+    color: aliceblue;
+
+
+
+}
+body .containe {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 40px 0;
+    
+  }
+  
+  body .containe .card {
+    position: relative;
+    min-width: 320px;
+    height: 440px;
+    box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2),
+        inset -5px -5px 15px rgba(255, 255, 255, 0.1),
+        5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
+    border-radius: 15px;
+    margin: 30px;
+    transition: 0.5s;
+  }
+  
+  body .containe .card:nth-child(1) .box .content a {
+    background: #000000;
+  }
+  
+  body .containe .card:nth-child(2) .box .content a {
+    background: #000000;
+  }
+  
+  body .containe .card:nth-child(3) .box .content a {
+    background: #000000;
+  }
+  
+  body .containe .card .box {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    right: 20px;
+    bottom: 20px;
+    background: #2e2f30;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transition: 0.5s;
+  }
+  
+  body .containe .card .box:hover {
+    transform: translateY(-50px);
+  }
+  
+  body .containe .card .box:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.03);
+  }
+  
+  body .containe .card .box .content {
+    padding: 20px;
+    text-align: center;
+  }
+  
+  body .containe .card .box .content h2 {
+    position: absolute;
+    top: -10px;
+    right: 30px;
+    font-size: 8rem;
+    color: rgba(236, 224, 224, 0.1);
+  }
+  
+  body .containe .card .box .content h3 {
+    font-size: 1.8rem;
+    color: #fff;
+    z-index: 1;
+    transition: 0.5s;
+    margin-bottom: 15px;
+  }
+  
+  body .containe .card .box .content p {
+    font-size: 1rem;
+    font-weight: 300;
+    color: rgba(255, 255, 255, 0.9);
+    z-index: 1;
+    transition: 0.5s;
+  }
+  
+  body .containe .card .box .content a {
+    position: relative;
+    display: inline-block;
+    padding: 8px 20px;
+    background: black;
+    border-radius: 5px;
+    text-decoration: none;
+    color: white;
+    margin-top: 20px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    transition: 0.5s;
+  }
+  body .containe .card .box .content a:hover {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.6);
+    background: #928c8c;
+    color: #000;
+  }
+  
+
+
   /* ///////////..utility classes../////////// */
 
 .container {
