--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ main
 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr ;
-    grid-template-rows: 10em auto 1fr auto;
+    grid-template-rows: 100vh 100vh 100vh 100vh 100vh;
     grid-row: 2;
 
 }
@@ -44,13 +44,12 @@ h2
 {
     padding-left: 10px;
     grid-column: 1;
-    grid-row: 2;
+    grid-row: 1;
     color: #ffffff;
 }
 .about
 {
-
-    grid-column: 1;
+    grid-column: 1 / span 3;
     grid-row: 2;
     width: 30em;
     padding: 5px;
@@ -65,14 +64,21 @@ main h1
 {
     grid-row: 1;
     color: #ffffff;
-    grid-column: 1/3;
+    grid-column: 2;
     text-align: center;
     position: relative;
     top: 50%;
 }
-main .rambo
+.presentation
 {
-    grid-row: 2;
+    grid-row: 1;
+    grid-column: 1/ span3;
+    align-items: center;
+}
+.rambo
+{
+    background-size: contain;
+    grid-row: 1;
     grid-column: 3;
     height: 20em;
     margin-top: 10%;
@@ -212,7 +218,25 @@ body .containe {
     background: #928c8c;
     color: #000;
   }
-  
+.contact
+{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    grid-column: 1/4;
+    grid-row: 5;
+}
+.logo-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    grid-row: 5;
+}
+
+.logo-container a {
+    margin: 0 10px;
+}
+
 
 
   /* ///////////..utility classes../////////// */
