--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@700&display=swap");
 
+
 :root {
   /* Colors */
     --brand-color: hsl(46, 100%, 50%);
@@ -16,7 +17,9 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
+
 
 .html {
     font-size: 62.5%;
@@ -24,20 +27,31 @@
 }
 
 body {
-    background-image: url(../assets/1542530717.jpg);
-    background-size: cover;
+     /* background-image: url(../assets/1542530717.jpg);
+    background-size: cover; */
+    background-color: var(--black);
+
     height: 100vh;
     font-family: "Poppins", sans-serif;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 50px 1fr 50px;
 }
+/* canvas {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+
+} */
 main
 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr ;
     grid-template-rows: 100vh 100vh 100vh 100vh 100vh;
     grid-row: 2;
+    z-index: 6;
 
 }
 h2
@@ -47,41 +61,69 @@ h2
     grid-row: 1;
     color: #ffffff;
 }
-.about
+#about
 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 10em 1fr;
     grid-column: 1 / span 3;
     grid-row: 2;
-    width: 30em;
-    padding: 5px;
     color: #ffffff;
     font-size: 15px;
     text-align: left;
-    margin-left: 5%;
-    margin-top: 10%;
-
+    padding-top: 50px;
 }
-main h1
+.nom
 {
+    margin: auto;
+    font-size: 3.5rem;
+    font-weight: 300;
+    
     grid-row: 1;
     color: #ffffff;
     grid-column: 2;
-    text-align: center;
-    position: relative;
+    position: absolute;
     top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.description
+{
+    font-size: 25px;
+    grid-row: 1;
+    color: #f70000;
+    grid-column: 2;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
 }
 .presentation
 {
     grid-row: 1;
-    grid-column: 1/ span3;
+    grid-column: 1/ span 3;
     align-items: center;
+}
+#home
+{
+    grid-column: 1;
+    grid-row: 1;
+    align-self: center;
 }
 .rambo
 {
-    background-size: contain;
-    grid-row: 1;
-    grid-column: 3;
-    height: 20em;
-    margin-top: 10%;
+    grid-row: 2;
+    grid-column: 1;
+    height: 25em;
+    align-self: center;
+    justify-self: center;
+}
+.mess
+{
+    grid-row: 2;
+    grid-column: 2;
+    align-self: center;
+    justify-self: center;
 }
 .comp
 {
@@ -218,7 +260,7 @@ body .containe {
     background: #928c8c;
     color: #000;
   }
-.contact
+#contact
 {
     display: flex;
     justify-content: space-around;
@@ -231,6 +273,7 @@ body .containe {
     justify-content: space-evenly;
     align-items: center;
     grid-row: 5;
+    z-index: 5;
 }
 
 .logo-container a {
@@ -333,6 +376,11 @@ body .containe {
   /* ......../ media query /.......... */
 
 @media (max-width: 768px) {
+
+    body{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    }
 .navbar {
     opacity: 0.95;
     }
@@ -342,13 +390,13 @@ body .containe {
     display: block;
     }
 
-    .navbar-container {
+.navbar-container {
         display: block;
         position: relative;
         height: 64px;
     }
 
-    .navbar-container input[type="checkbox"] {
+.navbar-container input[type="checkbox"] {
         position: absolute;
         display: block;
         height: 32px;
@@ -357,9 +405,9 @@ body .containe {
         left: 20px;
         z-index: 5;
         opacity: 0;
-    }
+}
 
-    .navbar-container .hamburger-lines {
+.navbar-container .hamburger-lines {
         display: block;
         height: 23px;
         width: 35px;
@@ -370,7 +418,7 @@ body .containe {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-    }
+}
 
 .navbar-container .hamburger-lines .line {
         display: block;
@@ -406,34 +454,111 @@ body .containe {
         padding-left: 50px;
         transition: transform 0.5s ease-in-out;
         box-shadow: 5px 0px 10px 0px #aaa;
-    }
+}
 
 .navbar .menu-items li {
         margin-bottom: 1.5rem;
         font-size: 1.3rem;
         font-weight: 500;
-    }
+}
 
 .logo {
         position: absolute;
         top: 5px;
         right: 15px;
         font-size: 2rem;
-    }
+}
 
 .navbar-container input[type="checkbox"]:checked ~ .menu-items {
     transform: translateX(0);
-    }
+}
 
 .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
     transform: rotate(35deg);
-    }
+}
 
 .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
     transform: scaleY(0);
-    }
+}
 
 .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
     transform: rotate(-35deg);
+}
+
+.nom
+{
+    font-size: 30px;
+    top: 45%;
+}
+.comp
+{
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(6, 1fr
+    );
+}
+.icon1
+{
+    grid-column: 1;
+}
+.icon2
+{
+    grid-column: 2;
+}
+.icon3
+{
+    grid-column: 1;
+}
+.icon4
+{
+    grid-column: 2;
+}
+.icon5
+{
+    grid-column: 1;
+}
+.icon6
+{
+    grid-column: 2;
+}
+.icon7
+{
+    grid-column: 1;
+}
+.icon8
+{
+    grid-column: 2;
+}
+.icon9
+{
+    grid-column: 1;
+}
+.icon10
+{
+    grid-column: 2;
+}
+
+#contact
+{
+    grid-row: 7;
+
+    
+}
+#contact img
+{
+    width: 50%;
+}
+#contact h2
+{
+    display: none;
+}
+
+
+}
+
+@media (min-width: 800px) and (max-width: 1071px)
+{
+    .nom
+    {
+        font-size: 35px;
     }
 }
